plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.6'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'org.asciidoctor.jvm.convert' version '3.3.2'
}

group = 'com.kino'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

ext {
	set('snippetsDir', file("build/generated-snippets"))
}

dependencies {
	implementation 'com.kino:commons:0.0.1-SNAPSHOT'
	implementation 'org.springframework.kafka:spring-kafka:3.0.13'
	implementation 'org.springframework.boot:spring-boot-starter-amqp:3.1.6'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:3.1.6'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.1.6'
	implementation 'org.springframework.boot:spring-boot-starter-cache:3.1.6'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server:3.1.6'
	implementation 'org.springframework.boot:spring-boot-starter-security:3.1.6'
	implementation 'org.springframework.boot:spring-boot-starter-web:3.1.6'
	implementation 'org.springframework.security:spring-security-oauth2-jose'
	runtimeOnly 'org.postgresql:postgresql:42.6.0'
	testImplementation 'org.springframework.kafka:spring-kafka-test:3.0.13'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.6'
	testImplementation 'org.springframework.amqp:spring-rabbit-test:3.0.10'
	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc:3.0.1'
	testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('bootBuildImage') {
	builder = 'paketobuildpacks/builder-jammy-base:latest'
}

tasks.named('test') {
	outputs.dir snippetsDir
	useJUnitPlatform()
}

tasks.named('asciidoctor') {
	inputs.dir snippetsDir
	dependsOn test
}
